# terraform-aws-mesh-client

./: .gitallowed  .gitignore  .tool-versions  CHANGE-LOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  exclude-patterns.txt  pyproject.toml  sonar-project.properties  test-requirements.txt  tflint.hcl  tfsec.yml
.github/: CODEOWNERS  dependabot.yml
.github/actions/build-common/: action.yml
.github/actions/coverage-and-sonar/: action.yml
.github/actions/install-ci/: action.yml
.github/workflows/: create-release.yml  dependabot.yml  merge-develop.yml  pull-request.yml  scheduled-combine-dependabot-prs.yaml  secretscanner.yml
localstack/: Makefile  main.tf  provider.tf  variables.tf  vpc.tf
mesh_client_aws_serverless/: __init__.py  cloudlogbase.cfg  mesh_check_send_parameters_application.py  mesh_common.py  mesh_fetch_message_chunk_application.py  mesh_mailbox.py  mesh_poll_mailbox_application.py  mesh_send_message_chunk_application.py  poetry-cmd.sh  requirements.txt
mesh_sandbox/store/data/: mailboxes.jsonl
mesh_sandbox/store/data/mailboxes/X26ABC1/in/: SIMPLE_MESSAGE.json  UNDELIVERED_MESSAGE.json
mesh_sandbox/store/data/mailboxes/X26ABC2/in/: CHUNKED_MESSAGE_GZ.json
module/: README.md  cloudtrail.tf  data.tf  dynamodb_table_locktable.tf  eventbridge_get_messages.tf  eventbridge_get_messages_handshake.tf  eventbridge_send_message.tf  kms.tf  lambda_archives.tf  lambda_check_send_parameters.tf  lambda_fetch_message_chunk.tf  lambda_poll_mailbox.tf  lambda_send_message_chunk.tf  locals.tf  mesh_mailboxes.tf  outputs.tf  pack-app.sh  pack-deps.sh  s3_mesh.tf  secrets.tf  sg.tf  ssm.tf  ssm_config.tf  stepfunctions_get_messages.tf  stepfunctions_send_message.tf  variables.tf
module/mailboxes/: locals.tf  outputs.tf  s3.tf  ssm.tf  variables.tf
module/scripts/: mesh_aws_client_dependencies.sh  pack_app.sh  pack_deps.sh
nhsd-git-secrets/: install-linux.sh  nhsd-rules-deny.txt  pre-commit.sh
scripts/: create-v2-sg-rule-imports.sh  sonar_tests.py
scripts/hooks/: commit-msg.sh  pre-commit.sh
scripts/self-signed-ca/: .gitignore  Makefile  README.md  create-all.sh  create-ca.sh  create-client-cert.sh  create-env-file.sh  create-server-cert.sh  create-x-spine-clientcerts.sh
scripts/self-signed-ca/conf/: client.conf  root-ca.conf  server.conf  sub-ca.conf
src/: cloudlogbase.cfg  mesh_check_send_parameters_application.py  mesh_fetch_message_chunk_application.py  mesh_poll_mailbox_application.py  mesh_send_message_chunk_application.py  poetry-cmd.sh  requirements.txt  rsync-exclude.txt
src/shared/: application.py  common.py  config.py  mailbox.py  send_parameters.py
stacks/localstack/: locals.tf  main.tf  provider.tf  required_providers.tf  secrets.tf  ssm.tf  variables.tf  vpc.tf
terraform/: README.md  cloudtrail.tf  eventbridge_get_messages_handshake.tf  lambda_archives.tf  mesh_mailboxes.tf  s3_logs.tf  secrets.tf  stepfunctions_get_messages.tf  terraform.tf  variables.tf
terraform/scripts/: mesh_aws_client.sh  mesh_aws_client_dependencies.sh
tests/: localstack_tests.py  mesh_check_send_parameters_application_test.py  mesh_common_test.py  mesh_fetch_message_chunk_application_test.py  mesh_get_file_from_s3_test.py  mesh_poll_mailbox_application_test.py  mesh_send_message_chunk_application_test.py  mesh_testing_common.py
tests/integration/: __init__.py  application_test.py  conftest.py  constants.py  fetch_message_chunk_test.py  get_messages_test.py  send_message_test.py  send_params_test.py  test_helpers.py
tests/mocked/: conftest.py  mesh_check_send_parameters_application_test.py  mesh_common_test.py  mesh_fetch_message_chunk_application_test.py  mesh_get_file_from_s3_test.py  mesh_poll_mailbox_application_test.py  mesh_send_message_chunk_application_test.py  mesh_testing_common.py
