[tool.poetry]
name = "mesh-client-aws-serverless"
version = "0.1.0"
description = "NHS MESH Client built using AWS serverless technologies only"
authors = ["spine core"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NHSDigital/terraform-aws-mesh-client"
packages = [
    { include = "shared", from = "./src" },
]

[tool.poetry.dependencies]
python = "^3.11"
importlib-metadata = "8.0.0"
urllib3 = "^2.2.2"
spine-aws-common = "^0.2.14"
nhs-aws-helpers = "^0.7.7"
aws-lambda-powertools = "^2.36.0"
mesh-client = "^3.2.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
# ci / testing dependencies
boto3 = "^1.33.1"
mypy = "^1.4.0"
coverage = "^7.2.7"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
moto = {extras = ["s3", "ssm", "stepfunctions", "secretsmanager", "dynamodb"], version = "^5.0.14"}
boto3-stubs = {extras = ["s3", "ssm", "secretsmanager", "dynamodb", "stepfunctions", "sqs", "lambda", "logs",], version = "^1.34.32"}
ruff = "^0"
petname = "^2.6"
black = "^24"
tox = "^4.18"
freezegun = "^1.5.1"

[tool.poetry.group.local.dependencies]


[tool.ruff]
lint.select = [
    # See https://beta.ruff.rs/docs/rules/ for a full list
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q", # flake8-quotes
    "YTT", # flake8-2020
    "RSE", # flake8-raise
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "EXE", # flake8-executable
    "A", # flake8-builtins
    "UP",  # pyupgrade
    "PT", # flake8-pytest-style
    "PERF", # Perflint #
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
]
src = ["."]
lint.ignore = [
    "SIM112"  # casing on environment variables
]
exclude = [
    ".git",
    ".venv",
]
lint.unfixable = ["SIM112"]
line-length = 120
target-version = "py311"

[tool.ruff.lint.per-file-ignores]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
check_untyped_defs = true
exclude = [
    "build",
    "dist",
    "scripts",
    "terraform",
    "module"
]

[[tool.mypy.overrides]]
module = "spine_aws_common.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moto.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_classes = "NoTestClasses"
python_files = "*_test.py test_*.py _tests.py"
norecursedirs = ".git .venv .eggs build dist .tox"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
omit = [
    ".venv/*",
    ".tox/*",
    "tests/*",
    "terraform/dist/*",
    "terraform/mesh_aws_client/*",
    "terraform/mesh_aws_client_dependencies/*"
]
source = [
    "."
]


[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    "from .*",
    "import .*"
]
omit = [
    "tests/*",
]
sort = "-cover"
ignore_errors = true
precision = 2
fail_under = 65
show_missing = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min-version=3.1
    env_list =
        py311
        py312

    [gh-actions]
    python =
        3.11: py311
        3.12: py312

    [testenv]
    allowlist_externals = poetry
    setenv =
        PYTHONPATH = src/
    deps =
        pytest
        pytest-asyncio
        moto
        boto3
        petname
        freezegun
    commands =
        pytest
"""


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
